2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/prsht.h (SNDMDG, POSTMSG): Fix typo.
	* include/windowsx.h (SNDMSG): Ditto.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/prsht.h (SNDMSG, POSTMSG): Define macros and use throughout.

	Thank you to Ozkan Sezer for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/windowsx.h (SNDMSG): Define macro and use throughout.

	Thank you to Chris Oldwood for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/oleacc.h (AccessibleObjectFromEvent): Correct definition.

	Thank you to Rick Walsh for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (MoveFileWithProcessA, MoveFileWithProgressW): Define.

2010-08-24  Vinky  <rabbit_vinky@users.sourceforge.net>

	* include/winbase.h (OVERLAPPED): Correct definition.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winnt.h (IMAGE_NT_HEADERS32, IMAGE_NT_HEADERS64): Correct
	definition.

	Thank you to Pasi Ruokola for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/exdisp.h (get_RegisterAsBrowser): Fix typo.

	Thank you to cheznonnon for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/ws2_32.def: Regenerate using gendef on a Win7 machine.

2010-08-24  Ozkan Sezer  <sezero@users.sourceforge.net>

	* winnt.h: Fix several SUBLANG ID errors (ref:
	http://msdn.microsoft.com/en-us/library/dd318693(VS.85).aspx).
	(SUBLANG_UI_CUSTOM_DEFAULT): 0x05, not 0x03.
	(SUBLANG_HAUSA_NIGERIA): Bad ID name, correct one is ...
	(SUBLANG_HAUSA_NIGERIA_LATIN): ... this.
	(SUBLANG_INUKTITUT_CANADA_LATIN): 0x02, not 0x01.
	(SUBLANG_IRISH_IRELAND): 0x02, not 0x01.
	(SUBLANG_LAO_LAO_PDR): Bad ID name, correct one is ...
	(SUBLANG_LAO_LAO): ... this.
	(SUBLANG_LOWER_SORBIAN_GERMANY): 0x02, not 0x01.